# robot-head-service

./: Cargo.toml  Dockerfile  Makefile  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
config/: settings.yaml
debian/: service
robot_head_service/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html  struct.RobotHeadCommand.html
servo_test/: all.html  fn.main.html  index.html  struct.Args.html
src/: configuration.rs  error.rs  lib.rs
src/robot_head_service/: configuration.rs.html  error.rs.html  lib.rs.html  robot_head_service.rs.html
src/servo_test/: servo_test.rs.html
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
